tmp/LUE108.c.err
./adminaccess/codes/LUE108.c: In function ‘main’:
./adminaccess/codes/LUE108.c:12:2: error: expected expression before ‘}’ token
  }
  ^
